--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 
         <title>Library</title>
 
+        <!-- Preload the WOFF2 files for fonts used in above-the-fold content (title, subtitle, section title) -->
+
+        <link rel="preload" href="assets/fonts/CinzelDecorative/subset-CinzelDecorative-Bold.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="preload" href="assets/fonts/NotoSerif/subset-NotoSerif-Regular.woff2" as="font" type="font/woff2" crossorigin>
+
+        <link rel="preload" href="assets/fonts/Junicode/Junicode-Bold.woff2" as="font" type="font/woff2" crossorigin>
+
         <link rel="stylesheet" href="style.css">
 
         <script src="script.js" defer></script>
