Use `data-*` HTML attributes to link book card list items to their UUIDs
Add a `data-id` HTML attribute to book card list item (`li.book-card`) and change its value to the associated book's UUID in function `displayBook`

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <ul class="book-list">
                     <template id="book-card-li-template">
-                        <li class="book-card">
+                        <li class="book-card" data-id="default">
                             <h4 class="book-title">
                                 <cite></cite>
                             </h4>
