Create footer styles
Remove unnecessary `div` in footer (`footer`) and Create footer styles

--- a/index.html
+++ b/index.html
@@ -154,21 +154,19 @@
         </main>
 
         <footer class="footer">
-            <div class="footer-content">
-                <!-- TODO: Create a script to automatically set `target="_blank"`, `rel="noopener noreferrer", and `title="Click to open in a new tab"` for anchor elements. -->
+            <!-- TODO: Create a script to automatically set `target="_blank"`, `rel="noopener noreferrer", and `title="Click to open in a new tab"` for anchor elements. -->
 
-                <!--
-                `rel="author"` indicates that the document referenced by the anchor element provides information on the author of this document.
-                
-                Refer to: https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Attributes/rel#author.
-                -->
+            <!--
+            `rel="author"` indicates that the document referenced by the anchor element provides information on the author of this document.
+            
+            Refer to: https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Attributes/rel#author.
+            -->
 
-                <p class="credit">
-                    Created by <a href="https://www.github.com/ali-aboulsauood" target="_blank" rel="author noopener noreferrer" title="Click to open in a new tab" class="github-profile-link">Ali Aboul-Sauood</a>.
-                </p>
+            <p class="credit">
+                Created by <a href="https://www.github.com/ali-aboulsauood" target="_blank" rel="author noopener noreferrer" title="Click to open in a new tab" class="github-profile-link">Ali Aboul-Sauood</a>
+            </p>
 
-                <a href="https://www.github.com/ali-aboulsauood/library" target="_blank" rel="noopener noreferrer" title="Click to open in a new tab" class="github-repo-link">View GitHub repository</a>
-            </div>
+            <a href="https://www.github.com/ali-aboulsauood/library" target="_blank" rel="noopener noreferrer" title="Click to open in a new tab" class="github-repo-link">View GitHub repository</a>
         </footer>
 
         <!-- 
