Add tooltips to library log table headers
Add `title` attribute-value pairs to library log table header elements (`.stats-table th`) as their text content is very concise.

--- a/index.html
+++ b/index.html
@@ -131,22 +131,22 @@
                     <!-- `tbody` is implicitly included by user agents, but it is explicitly included here to prevent confusion during styling/scripting.  -->
                     <tbody>
                         <tr>
-                            <th scope="row">Books</th>
+                            <th scope="row" title="Number of books in your library">Books</th>
                             <td data-item="number-of-books"></td>
                         </tr>
 
                         <tr>
-                            <th scope="row">Pages</th>
+                            <th scope="row" title="Total number of pages of books in your library">Pages</th>
                             <td data-item="number-of-pages"></td>
                         </tr>
 
                         <tr>
-                            <th scope="row">Books read</th>
+                            <th scope="row" title="Number and percentage of books you have finished reading">Books read</th>
                             <td data-item="number-of-books-read"></td>
                         </tr>
 
                         <tr>
-                            <th scope="row">Books unread</th>
+                            <th scope="row" title="Number and percentage of books you have not finished reading">Books unread</th>
                             <td data-item="number-of-books-unread"></td>
                         </tr>
                     </tbody>
